Add gender and contact information to form

--- a/sign-up.html
+++ b/sign-up.html
@@ -58,10 +58,25 @@
                 <label for="age">Age</label>
                 <input type="number" name="age" placeholder="Age" step="2" min="18" max="99" id="age" />
                 <br>
+                <div class="radio-buttons">
+                    <p><strong>Gender</strong></p>
+                    <div>
+                        <label for="male">Male</label>
+                        <input type="radio" name="gender" id="male" value="male" required checked>
+                    </div>
+                    <div>
+                        <label for="female">Female</label>
+                        <input type="radio" name="gender" id="female" value="female" required>
+                    </div>
+                </div>
+                <br>
+                <p><strong>Contact inormation</strong></p>
+                <label for="phone-number">Phone Number</label>
+                <input type="number" name="phone-number" placeholder="0123456789" id="phone-number">
+                <br>
                 <label for="email-address">Email Address: </label>
                 <input type="email" name="email-address" placeholder="Enter your Email Address" id="email-address"
                     required />
-                <br>
             </form>
         </section>
     </main>
