--- a/sign-up.html
+++ b/sign-up.html
@@ -58,6 +58,7 @@
                 <label for="age">Age</label>
                 <input type="number" name="age" placeholder="Age" step="2" min="18" max="99" id="age" />
                 <br>
+                <br>
                 <div class="radio-buttons">
                     <p><strong>Gender</strong></p>
                     <div>
@@ -77,6 +78,15 @@
                 <label for="email-address">Email Address: </label>
                 <input type="email" name="email-address" placeholder="Enter your Email Address" id="email-address"
                     required />
+                <br>
+                <br>
+                <label for="feedback"><strong>Feedback</strong></label>
+                <br>
+                <textarea id="feedback" name="feedback" value="feedback" cols="50" rows="5"
+                    placeholder="Please let us know how we can improve this website"></textarea>
+                    <br>
+                    <button type="submit">Send</button>
+                    <button type="reset">Clear</button>
             </form>
         </section>
     </main>
