Add note to the form

--- a/sign-up.html
+++ b/sign-up.html
@@ -59,7 +59,7 @@
                 <input type="number" name="age" placeholder="Age" step="2" min="18" max="99" id="age" />
                 <br>
                 <br>
-                <div class="radio-buttons">
+                <div class="gender-buttons">
                     <p><strong>Gender</strong></p>
                     <div>
                         <label for="male">Male</label>
@@ -83,10 +83,15 @@
                 <label for="feedback"><strong>Feedback</strong></label>
                 <br>
                 <textarea id="feedback" name="feedback" value="feedback" cols="50" rows="5"
-                    placeholder="Please let us know how we can improve this website"></textarea>
-                    <br>
-                    <button type="submit">Send</button>
-                    <button type="reset">Clear</button>
+                    placeholder="Please let us know how we can improve this website">
+                </textarea>
+                <div class="note">
+                    <p>By clicking Send, you agree to our Terms and Conditions, Privacy and Cookies policy. You may
+                        receive notifications from us and you can choose to cancel this at any time</p>
+                </div>
+                <br>
+                <button type="submit">Send</button>
+                <button type="reset">Clear</button>
             </form>
         </section>
     </main>
