Made text inputs larger and note italic

--- a/sign-up.html
+++ b/sign-up.html
@@ -71,7 +71,7 @@
                     </div>
                 </div>
                 <br>
-                <p><strong>Contact inormation</strong></p>
+                <p><strong>Contact information</strong></p>
                 <label for="phone-number">Phone Number</label>
                 <input type="number" name="phone-number" placeholder="0123456789" id="phone-number">
                 <br>
