Styled buttons on sign up page

--- a/sign-up.html
+++ b/sign-up.html
@@ -86,7 +86,8 @@
                     placeholder="Please let us know how we can improve this website">
                 </textarea>
                 <div class="note">
-                    <p>By clicking Send, you agree to our <a href="#">Terms</a> and <a href="#">Conditions</a>, <a href="#">Privacy</a> and <a href="#">Cookies policy</a>. You may
+                    <p>By clicking Send, you agree to our <a href="#">Terms</a> and <a href="#">Conditions</a>, <a
+                            href="#">Privacy</a> and <a href="#">Cookies policy</a>. You may
                         receive notifications from us and you can choose to cancel this at any time</p>
                 </div>
                 <br>
