Removed videos and br tags as child elements of unordered lists

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <footer>
         <p>"If it doesn't challenge you, it doesn't change you." <strong>FRED_DEVITO</strong></p>
         <section class="social-media">
-            <h6>Hide</h6>
+            <h6 class="hide">Hidden</h6>
             <p>Follow Us</p>
             <ul class="social-networks">
                 <li><a href="https://x.com/" target="_blank" rel="noopener"
