--- a/workout-routines.html
+++ b/workout-routines.html
@@ -94,34 +94,35 @@
                             your knees
                             slightly, and bend forward, keeping your back straight. Grasp a barbell or pair of dumbbells
                             with your hands. Lift the weights by driving your hips forward while keeping your back flat.
-                            Slowly lower the weights back to the floor.</li> <video
-                            src="assets/videos/Tuesday/deadlift.mp4" controls autoplay muted loop>
-                            <p>Your browser doesn't support HTML5 video.</p>
-                        </video><br>
+                            Slowly lower the weights back to the floor.</li>
                         <li><strong>Hip thrusts:</strong> Sit on the ground with your shoulders on a bench or stable
                             chair behind you.
                             Keep your feet planted on the ground, and then push your hips up. Squeeze your glutes until
                             your knees are at a 90-degree angle. Lower your hips back to the ground.</li>
-                            <video src="assets/videos/Tuesday/hip thrusts.mp4" controls autoplay muted loop>
-                                <p>Your browser doesn't support HTML5 video.</p>
-                            </video>
-                            <br>
                         <li><strong>Lunges:</strong> Stand in a split stance, so one foot is a few feet in front of the
                             other. Keep your
                             torso straight, and then bend your knees until your back knee is a few inches from the floor
                             and your front thigh is parallel to the floor. Push through your heels to return to the
                             starting position. Repeat this move on the opposite sides.</li>
-                            <video src="assets/videos/Tuesday/lunges.mp4" controls autoplay muted loop>
-                                <p>Your browser doesn't support HTML5 video.</p>
-                            </video>
-                            <br>
                         <li><strong>Squats:</strong> Lower yourself like you are sitting in a chair. Keep your feet
                             shoulder-width apart
                             and your feet flat on the floor. Push back up to standing.</li>
-                            <video src="assets/videos/Tuesday/squats.mp4" controls autoplay muted loop>
-                                <p>Your browser doesn't support HTML5 video.</p>
-                            </video>
-                    </ul><br>
+                    </ul>
+                    <br>
+                    <video src="assets/videos/Tuesday/deadlift.mp4" controls autoplay muted loop>
+                        <p>Your browser doesn't support HTML5 video.</p>
+                    </video><br>
+                    <video src="assets/videos/Tuesday/hip thrusts.mp4" controls autoplay muted loop>
+                        <p>Your browser doesn't support HTML5 video.</p>
+                    </video>
+                    <br>
+                    <video src="assets/videos/Tuesday/lunges.mp4" controls autoplay muted loop>
+                        <p>Your browser doesn't support HTML5 video.</p>
+                    </video>
+                    <br>
+                    <video src="assets/videos/Tuesday/squats.mp4" controls autoplay muted loop>
+                        <p>Your browser doesn't support HTML5 video.</p>
+                    </video>
                 </div>
                 <hr>
                 <div>
@@ -135,23 +136,26 @@
                             hands. Let your elbows rest at your sides with your forearms extended out parallel to the
                             floor. Bend your elbows to bring the weight to your shoulders and then return to the start
                             position.</li>
-                            <video src="assets/videos/Wednesday/bicep curl.mp4" controls autoplay muted loop>
-                                <p>Your browser doesn't support HTML5 video.</p></video>
-                            <br>
                         <li><strong>Chest press: </strong> Lie back on a bench with your feet flat on the floor, holding
                             a dumbbell in each hand or a barbell in both. Keep your arms perpendicular to your body and
                             palms facing forward. Extend your elbows, pushing the weight up. Lower the weight to return
                             to the starting position.</li>
-                            <video src="assets/videos/Wednesday/chest press.mp4" controls autoplay muted loop>
-                                <p>Your browser doesn't support HTML5 video.</p></video>
-                            <br>
                         <li><strong>Tricep dip: </strong> Sit on a chair or bench and then grip the edge next to your
                             hips. Slide your butt off the chair and lower yourself so your elbows are bent at a 45- or
                             90-degree angle. Push yourself back to the starting position.</li>
-                            <video src="assets/videos/Wednesday/tricep dip.mp4" controls autoplay muted loop>
-                                <p>Your browser doesn't support HTML5 video.</p></video>
-                            <br>
                     </ul>
+                    <video src="assets/videos/Wednesday/bicep curl.mp4" controls autoplay muted loop>
+                        <p>Your browser doesn't support HTML5 video.</p>
+                    </video>
+                    <br>
+                    <video src="assets/videos/Wednesday/chest press.mp4" controls autoplay muted loop>
+                        <p>Your browser doesn't support HTML5 video.</p>
+                    </video>
+                    <br>
+                    <video src="assets/videos/Wednesday/tricep dip.mp4" controls autoplay muted loop>
+                        <p>Your browser doesn't support HTML5 video.</p>
+                    </video>
+                    <br>
                     <p>Perform 10 reps of each exercise for three sets with one minute of rest in between each set.
                         Finish this session with a quick core circuit. Pick some of your core moves—such as crunches,
                         planks, and Russian twists—and do each one for 30 seconds with 10–15 seconds off. Repeat the
@@ -200,24 +204,15 @@
                             on a bench. Rest your corresponding knee on the bench, keeping your other leg out to the
                             side and your foot flat on the floor. Hold a dumbbell in your other hand, rowing your elbow
                             up to your side until it's parallel to the floor. Lower and repeat on the other side.</li>
-                            <video src="assets/videos/Saturday/dumbbell single arm row.mp4" controls autoplay muted loop>
-                                <p>Your browser doesn't support HTML5 video.</p></video>
-                        <br>
                         <li><strong>Lat pull down:</strong> Grab the bar of a cable machine with your palms facing away
                             and shoulder-width apart. Make sure you are seated on a bench or kneeling on the floor. Pull
                             the bar down to your chest before returning slowly to the starting position.</li>
-                            <video src="assets/videos/Saturday/lat pull down.mp4" controls autoplay muted loop>
-                                <p>Your browser doesn't support HTML5 video.</p></video>
-                            <br>
                         <li><strong>Lateral raise:</strong> Standing or sitting with a dumbbell in each hand and arms at
                             your sides, engage your core and slowly lift the weights out to the side until your arms are
                             parallel to the floor. Slowly return to the starting position.</li>
-                            <video src="assets/videos/Saturday/lateral raise.mp4" controls autoplay muted loop>
-                                <p>Your browser doesn't support HTML5 video.</p></video>
-                            <br>
                         <li><strong>Reverse fly:</strong> With your feet shoulder-width apart, bend slightly at your
                             waist, holding a dumbbell in each hand. Raise both arms out to the side, squeezing your
-                            shoulder blades together. Return to the starting position.</li><br>
+                            shoulder blades together. Return to the starting position.</li>
                         <li>
                             <strong>Shoulder press: </strong> Either seated or standing, hold a dumbbell in each hand at
                             shoulder height. Keep your palms facing away and elbows bent at a 90-degree angle. Press the
@@ -225,7 +220,17 @@
                             starting position.
                         </li>
                     </ul>
+                    <video src="assets/videos/Saturday/dumbbell single arm row.mp4" controls autoplay muted loop>
+                        <p>Your browser doesn't support HTML5 video.</p>
+                    </video>
                     <br>
+                    <video src="assets/videos/Saturday/lat pull down.mp4" controls autoplay muted loop>
+                        <p>Your browser doesn't support HTML5 video.</p>
+                    </video>
+                    <br>
+                    <video src="assets/videos/Saturday/lateral raise.mp4" controls autoplay muted loop>
+                        <p>Your browser doesn't support HTML5 video.</p>
+                    </video>
                 </div>
                 <hr>
                 <div>
@@ -248,6 +253,7 @@
     <footer>
         <p>"If it doesn't challenge you, it doesn't change you." <strong>FRED_DEVITO</strong></p>
         <section class="social-media">
+            <h6 class="hide">Hidden</h6>
             <p>Follow Us</p>
             <ul class="social-networks">
                 <li><a href="https://x.com/" target="_blank" rel="noopener"
