Rename/ Change value of the videos in workout routines

--- a/workout-routines.html
+++ b/workout-routines.html
@@ -112,7 +112,7 @@
                     <video src="assets/videos/Tuesday/deadlift.mp4" controls autoplay muted loop>
                         <p>Your browser doesn't support HTML5 video.</p>
                     </video><br>
-                    <video src="assets/videos/Tuesday/hip thrusts.mp4" controls autoplay muted loop>
+                    <video src="assets/videos/Tuesday/hip-thrusts.mp4" controls autoplay muted loop>
                         <p>Your browser doesn't support HTML5 video.</p>
                     </video>
                     <br>
@@ -144,15 +144,15 @@
                             hips. Slide your butt off the chair and lower yourself so your elbows are bent at a 45- or
                             90-degree angle. Push yourself back to the starting position.</li>
                     </ul>
-                    <video src="assets/videos/Wednesday/bicep curl.mp4" controls autoplay muted loop>
+                    <video src="assets/videos/Wednesday/bicep-curl.mp4" controls autoplay muted loop>
                         <p>Your browser doesn't support HTML5 video.</p>
                     </video>
                     <br>
-                    <video src="assets/videos/Wednesday/chest press.mp4" controls autoplay muted loop>
+                    <video src="assets/videos/Wednesday/chest-press.mp4" controls autoplay muted loop>
                         <p>Your browser doesn't support HTML5 video.</p>
                     </video>
                     <br>
-                    <video src="assets/videos/Wednesday/tricep dip.mp4" controls autoplay muted loop>
+                    <video src="assets/videos/Wednesday/tricep-dip.mp4" controls autoplay muted loop>
                         <p>Your browser doesn't support HTML5 video.</p>
                     </video>
                     <br>
@@ -220,15 +220,15 @@
                             starting position.
                         </li>
                     </ul>
-                    <video src="assets/videos/Saturday/dumbbell single arm row.mp4" controls autoplay muted loop>
+                    <video src="assets/videos/Saturday/dumbbell-single-arm-row.mp4" controls autoplay muted loop>
                         <p>Your browser doesn't support HTML5 video.</p>
                     </video>
                     <br>
-                    <video src="assets/videos/Saturday/lat pull down.mp4" controls autoplay muted loop>
+                    <video src="assets/videos/Saturday/lat-pull-down.mp4" controls autoplay muted loop>
                         <p>Your browser doesn't support HTML5 video.</p>
                     </video>
                     <br>
-                    <video src="assets/videos/Saturday/lateral raise.mp4" controls autoplay muted loop>
+                    <video src="assets/videos/Saturday/lateral-raise.mp4" controls autoplay muted loop>
                         <p>Your browser doesn't support HTML5 video.</p>
                     </video>
                 </div>
