--- a/meal-preps.html
+++ b/meal-preps.html
@@ -132,6 +132,7 @@
     <footer>
         <p>"If it doesn't challenge you, it doesn't change you." <strong>FRED_DEVITO</strong></p>
         <section class="social-media">
+            <h6 class="hide">Hidden</h6>
             <p>Follow Us</p>
             <ul class="social-networks">
                 <li><a href="https://x.com/" target="_blank" rel="noopener"
