Add hidden header to meal prep table

--- a/meal-preps.html
+++ b/meal-preps.html
@@ -43,6 +43,7 @@
     <!--Main Content-->
     <main>
         <section class="meal-preps">
+            <h6 class="hide">Hidden</h6>
             <section>
                 <h2>7 days of healthy meals on a budget</h2><br>
                 <p>Eating well is an important part of a healthy lifestyle. Consuming a balanced mix of nutritious foods
@@ -53,6 +54,7 @@
                     to control your spending. Amounts given are per person.</p><br>
             </section>
             <section class="meal-prep-table">
+                <h6 class="hide">Hidden</h6>
                 <table>
                     <caption>8 Healthy and Effective Diets</caption>
 
