--- a/sign-up.html
+++ b/sign-up.html
@@ -50,13 +50,13 @@
                 <br>
                 <br>
                 <label for="first-name">First Name: </label>
-                <input type="text" name="first-name" placeholder="Enter your First name" id="first-name" required />
+                <input type="text" name="first-name" placeholder="Enter your First name" id="first-name" required>
                 <br>
                 <label for="last-name">Last Name: </label>
-                <input type="text" name="last-name" placeholder="Enter your Last name" id="last-name" required />
+                <input type="text" name="last-name" placeholder="Enter your Last name" id="last-name" required>
                 <br>
                 <label for="age">Age</label>
-                <input type="number" name="age" placeholder="Age" step="2" min="18" max="99" id="age" />
+                <input type="number" name="age" placeholder="Age" step="2" min="18" max="99" id="age">
                 <br>
                 <br>
                 <div class="gender-buttons">
@@ -77,12 +77,12 @@
                 <br>
                 <label for="email-address">Email Address: </label>
                 <input type="email" name="email-address" placeholder="Enter your Email Address" id="email-address"
-                    required />
+                    required>
                 <br>
                 <br>
                 <label for="feedback"><strong>Feedback</strong></label>
                 <br>
-                <textarea id="feedback" name="feedback" value="feedback" cols="50" rows="5"
+                <textarea id="feedback" name="feedback" cols="50" rows="5"
                     placeholder="Please let us know how we can improve this website">
                 </textarea>
                 <div class="note">
