--- a/sign-up.html
+++ b/sign-up.html
@@ -49,10 +49,10 @@
                 <p><strong>Note:</strong> It is totally free to be a member.</p>
                 <br>
                 <br>
-                <label for="first-name">First Name: </label>
+                <label class="input" for="first-name">First Name: </label>
                 <input type="text" name="first-name" placeholder="Enter your First name" id="first-name" required>
                 <br>
-                <label for="last-name">Last Name: </label>
+                <label class="input" for="last-name">Last Name: </label>
                 <input type="text" name="last-name" placeholder="Enter your Last name" id="last-name" required>
                 <br>
                 <label for="age">Age</label>
@@ -72,17 +72,17 @@
                 </div>
                 <br>
                 <p><strong>Contact information</strong></p>
-                <label for="phone-number">Phone Number</label>
+                <label class="input" for="phone-number">Phone Number</label>
                 <input type="number" name="phone-number" placeholder="0123456789" id="phone-number">
                 <br>
-                <label for="email-address">Email Address: </label>
+                <label class="input" for="email-address">Email Address: </label>
                 <input type="email" name="email-address" placeholder="Enter your Email Address" id="email-address"
                     required>
                 <br>
                 <br>
                 <label for="feedback"><strong>Feedback</strong></label>
                 <br>
-                <textarea id="feedback" name="feedback" cols="50" rows="5"
+                <textarea class="input" id="feedback" name="feedback" cols="50" rows="5"
                     placeholder="Please let us know how we can improve this website">
                 </textarea>
                 <div class="note">
