Put send and clear buttons in a div container

--- a/sign-up.html
+++ b/sign-up.html
@@ -91,8 +91,10 @@
                         receive notifications from us and you can choose to cancel this at any time</p>
                 </div>
                 <br>
-                <button type="submit">Send</button>
-                <button type="reset">Clear</button>
+                <div class="send-clear-buttons">
+                    <button type="submit">Send</button>
+                    <button type="reset">Clear</button>
+                </div>
             </form>
         </section>
     </main>
