--- a/sign-up.html
+++ b/sign-up.html
@@ -49,11 +49,11 @@
                 <p><strong>Note:</strong> It is totally free to be a member.</p>
                 <br>
                 <br>
-                <label class="input" for="first-name">First Name: </label>
-                <input type="text" name="first-name" placeholder="Enter your First name" id="first-name" required>
+                <label for="first-name">First Name: </label>
+                <input type="text" name="first-name" placeholder="Enter your First name" class="input" id="first-name" required>
                 <br>
-                <label class="input" for="last-name">Last Name: </label>
-                <input type="text" name="last-name" placeholder="Enter your Last name" id="last-name" required>
+                <label for="last-name">Last Name: </label>
+                <input type="text" name="last-name" placeholder="Enter your Last name" class="input" id="last-name" required>
                 <br>
                 <label for="age">Age</label>
                 <input type="number" name="age" placeholder="Age" step="2" min="18" max="99" id="age">
@@ -72,11 +72,11 @@
                 </div>
                 <br>
                 <p><strong>Contact information</strong></p>
-                <label class="input" for="phone-number">Phone Number</label>
-                <input type="number" name="phone-number" placeholder="0123456789" id="phone-number">
+                <label for="phone-number">Phone Number</label>
+                <input type="number" name="phone-number" placeholder="0123456789" class="input" id="phone-number">
                 <br>
-                <label class="input" for="email-address">Email Address: </label>
-                <input type="email" name="email-address" placeholder="Enter your Email Address" id="email-address"
+                <label for="email-address">Email Address: </label>
+                <input type="email" name="email-address" placeholder="Enter your Email Address" class="input" id="email-address"
                     required>
                 <br>
                 <br>
