Gave age input same styles as the other input elements

--- a/sign-up.html
+++ b/sign-up.html
@@ -56,7 +56,7 @@
                 <input type="text" name="last-name" placeholder="Enter your Last name" class="input" id="last-name" required>
                 <br>
                 <label for="age">Age</label>
-                <input type="number" name="age" placeholder="Age" step="2" min="18" max="99" id="age">
+                <input type="number" name="age" placeholder="Age" step="2" min="18" max="99" id="age" class="input" >
                 <br>
                 <br>
                 <div class="gender-buttons">
