--- a/sign-up.html
+++ b/sign-up.html
@@ -46,7 +46,8 @@
             <form action="sign-up.html" method="GET" class="signup-form">
                 <h2>Gym Membership Form</h2>
                 <h3>Start your Fit Lifestyle today!</h3>
-                <p><strong>Note:</strong> It is totally free to be a member.</p>
+                <br>
+                <p class="p-center"><strong>Note:</strong> It is totally free to be a member.</p>
                 <br>
                 <br>
                 <label for="first-name">First Name: </label>
