Add form content in a container

--- a/sign-up.html
+++ b/sign-up.html
@@ -50,6 +50,7 @@
                 <p class="p-center"><strong>Note:</strong> It is totally free to be a member.</p>
                 <br>
                 <br>
+                <div class="form-content">
                 <label for="first-name">First Name: </label>
                 <input type="text" name="first-name" placeholder="Enter your First name" class="input" id="first-name" required>
                 <br>
@@ -96,6 +97,7 @@
                     <button type="submit">Send</button>
                     <button type="reset">Clear</button>
                 </div>
+            </div>
             </form>
         </section>
     </main>
