Add Main workout goal select element to form

--- a/sign-up.html
+++ b/sign-up.html
@@ -66,12 +66,18 @@
                         <label for="age">Age</label>
                         <input type="number" name="age" placeholder="Age" step="2" min="18" max="99" id="age"
                             class="input">
-                    </div>  
+                    </div>
                     <div class="user-input-box">
-                        <label for="phone-number">Phone Number</label>
-                        <input type="number" name="phone-number" placeholder="0123456789" class="input"
-                            id="phone-number">
-                    </div>                  
+                        <label for="main-workout-goal">Main Workout Goal:</label>
+                        <select name="main-workout-goal" id="main-workout-goal" class="input">
+                            <option value="weight-loss">Weight Loss</option>
+                            <option value="muscle-gain">Muscle Gain</option>
+                            <option value="improved-enduarance">Improved Enduarance</option>
+                            <option value="increased-strength">Inceased Strength</option>
+                            <option value="better-flexibility">Better Flexibility</option>
+                            <option value="improved-mental-health">Improved Mental Health</option>
+                        </select>
+                    </div>
                     <div class="user-input-box">
                         <label for="phone-number">Phone Number</label>
                         <input type="number" name="phone-number" placeholder="0123456789" class="input"
