--- a/sign-up.html
+++ b/sign-up.html
@@ -99,11 +99,12 @@
                             <input type="radio" name="gender" id="female" value="female" required>
                         </div>
                     </div>
-                    <label for="feedback"><strong>Feedback</strong></label>
-                    <br>
-                    <textarea class="input" id="feedback" name="feedback" cols="50" rows="5"
-                        placeholder="Please let us know how we can improve this website">
-                </textarea>
+                    <div class="textarea">
+                        <label for="feedback"><strong>Feedback</strong></label>
+                        <textarea class="input" id="feedback" name="feedback" cols="50" rows="5"
+                            placeholder="Please let us know how we can improve this website">
+                     </textarea>
+                    </div>
                     <div class="note">
                         <p>By clicking Send, you agree to our <a href="#">Terms</a> and <a href="#">Conditions</a>, <a
                                 href="#">Privacy</a> and <a href="#">Cookies policy</a>. You may
