--- a/sign-up.html
+++ b/sign-up.html
@@ -88,8 +88,9 @@
                         <input type="email" name="email-address" placeholder="Enter your Email Address" class="input"
                             id="email-address" required>
                     </div>
+                    <p>Gender</p>
+                    <br>
                     <div class="gender-buttons">
-                        <p><strong>Gender</strong></p>
                         <div>
                             <label for="male">Male</label>
                             <input type="radio" name="gender" id="male" value="male" required checked>
