Centered note in form

--- a/sign-up.html
+++ b/sign-up.html
@@ -102,7 +102,8 @@
                     </div>
                     <div class="textarea">
                         <label for="feedback"><strong>Feedback</strong></label>
-                        <textarea class="input" id="feedback" name="feedback" cols="50" rows="5"
+                        <br>
+                        <textarea id="feedback" name="feedback" cols="50" rows="5" class="feedback-space"
                             placeholder="Please let us know how we can improve this website">
                      </textarea>
                     </div>
