Adjusted pb-text to pb-img adjustent to each other

--- a/index.html
+++ b/index.html
@@ -52,16 +52,21 @@
             <div class="workout-benefits">
                 <h2>Workout benefits</h2>
                 <div class="physical-benefits">
-                    <h3>Physical Benefits</h3>
-                    <ul>
-                        <li>Regular exercise strengthens the heart and improves circulation, reducing the risk of heart
-                            disease and stroke.</li>
-                        <li>Physical activity helps control weight by burning calories and building
-                            muscle mass.</li>
-                        <li>Regular exercise is linked to a longer
-                            lifespan by reducing the risk of many chronic diseases.</li>
-                    </ul>
-                    <img src="assets/images/man_carrying_dumbbells.webp" alt="seated man carrying dumbbells">
+                    <div class="pb-text">
+                        <h3>Physical Benefits</h3>
+                        <ul>
+                            <li>Regular exercise strengthens the heart and improves circulation, reducing the risk of
+                                heart
+                                disease and stroke.</li>
+                            <li>Physical activity helps control weight by burning calories and building
+                                muscle mass.</li>
+                            <li>Regular exercise is linked to a longer
+                                lifespan by reducing the risk of many chronic diseases.</li>
+                        </ul>
+                    </div>
+                    <div class="pb-img">
+                        <img src="assets/images/man_carrying_dumbbells.webp" alt="seated man carrying dumbbells">
+                    </div>
                 </div>
                 <hr>
                 <div class="mental-benefits">
