--- a/index.html
+++ b/index.html
@@ -69,48 +69,63 @@
                     </div>
                 </div>
                 <div class="mental-benefits">
-                    <h3>Mental Benefits</h3>
-                    <ul>
-                        <li>Physical activity stimulates the production of endorphins, which are natural mood lifters,
-                            reducing stress and anxiety levels.</li>
-                        <li>Exercise can help alleviate symptoms of depression and
-                            improve overall mood and well-being.</li>
-                        <li>Achieving fitness goals and improving physical
-                            appearance can enhance self-esteem and confidence.</li>
-                        <li>Physical activity helps develop mental
-                            toughness and resilience, which can be beneficial in dealing with life's challenges.</li>
-                    </ul>
-                    <img src="assets/images/woman_drinking_water_next_to_a_bike.webp"
-                        alt="woman drinking water next to a bike">
+                    <div class="mb-text">
+                        <h3>Mental Benefits</h3>
+                        <ul>
+                            <li>Physical activity stimulates the production of endorphins, which are natural mood
+                                lifters,
+                                reducing stress and anxiety levels.</li>
+                            <li>Exercise can help alleviate symptoms of depression and
+                                improve overall mood and well-being.</li>
+                            <li>Achieving fitness goals and improving physical
+                                appearance can enhance self-esteem and confidence.</li>
+                            <li>Physical activity helps develop mental
+                                toughness and resilience, which can be beneficial in dealing with life's challenges.
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="mb-img">
+                        <img src="assets/images/woman_drinking_water_next_to_a_bike.webp"
+                            alt="woman drinking water next to a bike">
+                    </div>
                 </div>
             </div>
             <div class="healthy-meals-benefits">
                 <h2>Benefits of healthy meals</h2>
                 <br>
                 <div class="physical-benefits">
-                    <h3>Physical benefits</h3>
-                    <ul>
-                        <li>Improved Nutrition; Provides essential vitamins and minerals.Ensures a balanced intake of
-                            macronutrients (proteins, fats, carbohydrates).</li>
-                        <li>Weight Management; Helps maintain a healthy weight.
-                            Reduces the risk of obesity.</li>
-                        <li>Enhanced Immune Function; Lowers the risk of chronic diseases such as heart disease,
-                            diabetes, and cancer.
-                            Reduces blood pressure and cholesterol levels.</li>
-                    </ul>
-                    <img src="assets/images/bowl_of_salad.webp" alt="a bowl of salad">
+                    <div class="pb-text">
+                        <h3>Physical benefits</h3>
+                        <ul>
+                            <li>Improved Nutrition; Provides essential vitamins and minerals.Ensures a balanced intake
+                                of
+                                macronutrients (proteins, fats, carbohydrates).</li>
+                            <li>Weight Management; Helps maintain a healthy weight.
+                                Reduces the risk of obesity.</li>
+                            <li>Enhanced Immune Function; Lowers the risk of chronic diseases such as heart disease,
+                                diabetes, and cancer.
+                                Reduces blood pressure and cholesterol levels.</li>
+                        </ul>
+                    </div>
+                    <div class="pb-text">
+                        <img src="assets/images/bowl_of_salad.webp" alt="a bowl of salad">
+                    </div>
                 </div>
                 <div class="mental-benefits">
-                    <h3>Mental benefits</h3>
-                    <ul>
-                        <li>Improved Mood; Stabilizes blood sugar levels, reducing mood swings.
-                            Increases the production of serotonin, the “feel-good” hormone.</li>
-                        <li>Reduced Stress and Anxiety; Provides nutrients that support the nervous system.
-                            Helps balance hormones and reduce stress levels.</li>
-                        <li>Better Cognitive Function; Supports brain health and improves memory and concentration.
-                            Reduces the risk of cognitive decline and dementia.</li>
-                    </ul>
-                    <img src="assets/images/lady_preparing_a_meal.webp" alt="a lady preparing a healthy meal">
+                    <div class="mb-text">
+                        <h3>Mental benefits</h3>
+                        <ul>
+                            <li>Improved Mood; Stabilizes blood sugar levels, reducing mood swings.
+                                Increases the production of serotonin, the “feel-good” hormone.</li>
+                            <li>Reduced Stress and Anxiety; Provides nutrients that support the nervous system.
+                                Helps balance hormones and reduce stress levels.</li>
+                            <li>Better Cognitive Function; Supports brain health and improves memory and concentration.
+                                Reduces the risk of cognitive decline and dementia.</li>
+                        </ul>
+                    </div>
+                    <div class="mb-img">
+                        <img src="assets/images/lady_preparing_a_meal.webp" alt="a lady preparing a healthy meal">
+                    </div>
                 </div>
             </div>
         </section>
