Add targetted styles on images on home page

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                                 Reduces blood pressure and cholesterol levels.</li>
                         </ul>
                     </div>
-                    <div class="pb-text">
+                    <div class="pb-img">
                         <img src="assets/images/bowl_of_salad.webp" alt="a bowl of salad">
                     </div>
                 </div>
