Add physical and mental benefits div to group the to divs inside together

--- a/index.html
+++ b/index.html
@@ -51,42 +51,45 @@
             <h2>A beginner's guide to start working out</h2>
             <div class="workout-benefits">
                 <h2>Workout benefits</h2>
-                <div class="physical-benefits">
-                    <div class="pb-text">
-                        <h3>Physical Benefits</h3>
-                        <ul>
-                            <li>Regular exercise strengthens the heart and improves circulation, reducing the risk of
-                                heart
-                                disease and stroke.</li>
-                            <li>Physical activity helps control weight by burning calories and building
-                                muscle mass.</li>
-                            <li>Regular exercise is linked to a longer
-                                lifespan by reducing the risk of many chronic diseases.</li>
-                        </ul>
+                <div class=".physiical-and-mental-benefits">
+                    <div class="physical-benefits">
+                        <div class="pb-text">
+                            <h3>Physical Benefits</h3>
+                            <ul>
+                                <li>Regular exercise strengthens the heart and improves circulation, reducing the risk
+                                    of
+                                    heart
+                                    disease and stroke.</li>
+                                <li>Physical activity helps control weight by burning calories and building
+                                    muscle mass.</li>
+                                <li>Regular exercise is linked to a longer
+                                    lifespan by reducing the risk of many chronic diseases.</li>
+                            </ul>
+                        </div>
+                        <div class="pb-img">
+                            <img src="assets/images/man_carrying_dumbbells.webp" alt="seated man carrying dumbbells">
+                        </div>
                     </div>
-                    <div class="pb-img">
-                        <img src="assets/images/man_carrying_dumbbells.webp" alt="seated man carrying dumbbells">
-                    </div>
-                </div>
-                <div class="mental-benefits">
-                    <div class="mb-text">
-                        <h3>Mental Benefits</h3>
-                        <ul>
-                            <li>Physical activity stimulates the production of endorphins, which are natural mood
-                                lifters,
-                                reducing stress and anxiety levels.</li>
-                            <li>Exercise can help alleviate symptoms of depression and
-                                improve overall mood and well-being.</li>
-                            <li>Achieving fitness goals and improving physical
-                                appearance can enhance self-esteem and confidence.</li>
-                            <li>Physical activity helps develop mental
-                                toughness and resilience, which can be beneficial in dealing with life's challenges.
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="mb-img">
-                        <img src="assets/images/woman_drinking_water_next_to_a_bike.webp"
-                            alt="woman drinking water next to a bike">
+                    <div class="mental-benefits">
+                        <div class="mb-text">
+                            <h3>Mental Benefits</h3>
+                            <ul>
+                                <li>Physical activity stimulates the production of endorphins, which are natural mood
+                                    lifters,
+                                    reducing stress and anxiety levels.</li>
+                                <li>Exercise can help alleviate symptoms of depression and
+                                    improve overall mood and well-being.</li>
+                                <li>Achieving fitness goals and improving physical
+                                    appearance can enhance self-esteem and confidence.</li>
+                                <li>Physical activity helps develop mental
+                                    toughness and resilience, which can be beneficial in dealing with life's challenges.
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="mb-img">
+                            <img src="assets/images/woman_drinking_water_next_to_a_bike.webp"
+                                alt="woman drinking water next to a bike">
+                        </div>
                     </div>
                 </div>
             </div>
