Corrected the workout-pm-benefits to make the 2 divs next to each other

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <h2>A beginner's guide to start working out</h2>
             <div class="workout-benefits">
                 <h2>Workout benefits</h2>
-                <div class=".physiical-and-mental-benefits">
+                <div class="workout-pm-benefits">
                     <div class="physical-benefits">
                         <div class="pb-text">
                             <h3>Physical Benefits</h3>
